salesforce_app/force-app/main/default/objects/Admin_User__c/Admin_User__c.object-meta.xml
<CustomObject>
    <label>Admin User</label>
    <nameField>
        <label>Admin Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Admin Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>