salesforce_app/force-app/main/default/objects/Admin_User__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>The role of the administrator (Super Admin or Team Lead).</description>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Super Admin</fullName>
                <default>true</default>
                <label>Super Admin</label>
            </value>
            <value>
                <fullName>Team Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>