salesforce_app/force-app/main/default/objects/Admin_User__c/fields/Session_Token__c.field-meta.xml
<CustomField>
    <fullName>Session_Token__c</fullName>
    <label>Session Token</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>