salesforce_app/force-app/main/default/objects/Admin_User__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Password__c</columns>
    <columns>Role__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>